--- a/stylem.css
+++ b/stylem.css
@@ -70,7 +70,8 @@ body{
   letter-spacing: 10px;
 }
 .current{
-  padding: 20px 15px 0 15px;
+  margin: 0px 10px 0 10px;
+  border-radius: 10px;
 }
 .currentTitle{
   font-weight: 999;
@@ -81,11 +82,36 @@ body{
   letter-spacing: 3px;
 }
 .currentText{
-  padding-top: 12px;
-  text-align: right;
-  color: #eee;
-  font-size: 1.3rem;
+  /* margin-top: 10px;; */
+  /* text-align: right; */
+  color: #ebeaea;
+  font-size: 1.2rem;
+  word-spacing: 2px;
+  display: inline-block;
+  margin: 5px;
+
 }
+
+.cone, .cthree{
+  color: white;
+font-size: 1.2rem;
+}
+.ctwo, .cfour{
+font-size: 1.2rem;
+  color: rgb(172, 172, 172);
+
+}
+.aboutTitle{
+  font-weight: 999;
+  background: -webkit-linear-gradient(lightgrey,grey);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 2.4rem;
+  padding-left: 14px;
+  letter-spacing: 3px;
+  margin-top: 20px;
+}
+
 .vit{
   text-align: right;
   padding-top: 10px;
