--- a/stylem.css
+++ b/stylem.css
@@ -130,12 +130,12 @@
     font-size: 1.1rem;
   }
   .container {
-    width: 100%;
+    width: 100vw;
     max-width: 700px;
     margin: 50px auto 0 auto;
   }
   button.accordion {
-    width: 100%;
+    width: 100vw;
     background-color: lightgrey;
     outline: none;
     text-align: left;
